tests/NormalTests/paczka1/small_fuzzy/10859796.err
Error in line 9: 5UHmEWzqNiv S595 17,5
Error in line 1: CeMJROci A857 80,6
Error in line 2: A857 A439 77,2
Error in line 15: A857 A857 249,7
